--- a/mon/index.html
+++ b/mon/index.html
@@ -109,31 +109,36 @@
                                             <li class="has-children">
                                                 <a href="#kuhni">
                                                     Кухни
+                                                    <i class="ti-angle-down"></i>
                                                 </a>
                                                 <ul class="submenu">
                                                     <li><a href="#l-kuhni">Прямые</a></li>
-                                                    <li><a href="#ll-kuhni">Двухрядная кухня</a></li>
+                                                    <li><a href="#ll-kuhni">Двухрядные</a></li>
                                                     <li><a href="#p-kuhni">П-Образные</a></li>
                                                     <li><a href="#g-kuhni">Г-Образные</a></li>
-                                                    <li><a href="#s-kuhni">Кухня с островом</a></li>
+                                                    <li><a href="#s-kuhni">С островом</a></li>
                                                     <li><a href="single-blog.html">Современные</a></li>
                                                     <li><a href="single-blog.html">Классические</a></li>
                                                     <li><a href="single-blog.html">В стиле ЛОФТ</a></li>
                                                 </ul>
                                             </li>
                                             <li class="has-children">
-                                                <a href="#">
+                                                <a href="#fabric">
                                                     Материалы
+                                                    <i class="ti-angle-down"></i>
                                                 </a>
                                                 <ul class="submenu">
+                                                    <li><a href="#">Каркас кухни</a></li>
                                                     <li><a href="#">Фасады</a></li>
-                                                    <li><a href="#">Столешница</a></li>
+                                                    <li><a href="#">Столешницы</a></li>
                                                     <li><a href="#">Фартух</a></li>
+                                                    <li><a href="#">Комплектующие</a></li>
                                                     <li><a href="#">Фурнитура</a></li>
-                                                    <li><a href="#">Корпус кухни</a></li>
+                                                    <li><a href="#">Подсветка</a></li>
                                                 </ul>
                                             </li>
                                             <li><a href="#price-kuhni">Цены</a></li>
+                                            <li><a href="#">Проект кухни</a></li>
                                             <li><a href="contact.html">О нас</a></li>
                                             <li><a href="contact.html">Контакты</a></li>
                                         </ul>
@@ -1596,6 +1601,347 @@
     </section>
 <!-- End Price -->
 
+<section id="fabric" class="mb-5 mt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="section_title text-center mb-5">
+                    <span>материалы</span>
+                    <h3>Элементы кухни и материалы</h3>
+                </div>
+            </div>
+        </div>
+
+        <div id="karkas" class="pt-5 pb-5">
+            <div class="heading-el text-center">
+                        <div class="row">
+                                <div class="col-12 col-md-12 p-2">
+                                    <h4>
+                                        <span class="lnr lnr-bookmark"></span>
+                                        Каркас кухни
+                                    </h4>
+                                </div>
+                        </div>
+
+                        <div class="row justify-content-center">
+                            <div class="col-md-6">
+                                <img src="images/karcas.jpg" class="img-fluid">
+                            </div>
+                        </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="list-item-material text-center p-3">
+
+                                <p>Корпус – основа мебели. От его надежности и качества зависит срок службы, а если корпус испортится, вам придется менять мебель.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">ДСП</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал</span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">МДФ</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал Самый популярный материал Самый популярный материал Самый популярный материал </span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">Массив</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал</span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <div>
+                    <span> <i class="fa fa-star" aria-hidden="true"></i> - популярность материала</span>
+                </div>
+            </div>
+        </div>
+        <div id="fasad" class="pt-5 pb-5">
+            <div class="heading-el text-center">
+                <div class="row">
+                    <div class="col-12 col-md-12 p-2">
+                        <h4>
+                            <span class="lnr lnr-bookmark"></span>
+                            Фасады
+                        </h4>
+                    </div>
+                </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-md-6">
+                        <img src="images/fasad.jpg" class="img-fluid">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="list-item-material text-center p-3">
+
+                            <p>Корпус – основа мебели. От его надежности и качества зависит срок службы, а если корпус испортится, вам придется менять мебель.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">Пластик</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал</span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">МДФ</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал Самый популярный материал Самый популярный материал Самый популярный материал </span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">Массив</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал</span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">Рамочные</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал</span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <div>
+                    <span> <i class="fa fa-star" aria-hidden="true"></i> - популярность материала</span>
+                </div>
+            </div>
+        </div>
+        <div id="stol-kuhni" class="pt-5 pb-5">
+            <div class="heading-el text-center">
+                <div class="row">
+                    <div class="col-12 col-md-12 p-2">
+                        <h4>
+                            <span class="lnr lnr-bookmark"></span>
+                            Столешницы
+                        </h4>
+                    </div>
+                </div>
+
+                <div class="row justify-content-center">
+                    <div class="col-md-6">
+                        <img src="images/stol.jpg" class="img-fluid">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="list-item-material text-center p-3">
+
+                            <p>Корпус – основа мебели. От его надежности и качества зависит срок службы, а если корпус испортится, вам придется менять мебель.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">Пластик</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал</span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">МДФ</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал Самый популярный материал Самый популярный материал Самый популярный материал </span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">Массив</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал</span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="material p-3">
+                <div class="item-material p-2">
+                    <div class="row">
+                        <div class="col-md-4 raiting text-center">
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="text-left">
+
+                                <span class="item-el-name">Рамочные</span>
+                                <span class="lnr lnr-arrow-right"></span>
+                                <span>Самый популярный материал</span>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center">
+                <div>
+                    <span> <i class="fa fa-star" aria-hidden="true"></i> - популярность материала</span>
+                </div>
+            </div>
+        </div>
+
+
+
+
+    </div>
+</section>
+
+
 
 <!-- Rewievs -->
 <section class="mt-5 mb-5">
@@ -1968,3 +2314,9 @@
 </body>
 
 </html>
+
+<!--
+1. Из чего состоит кухня (картинка с указателями на отдельные состовляющие кухонного гарнитура)
+2. Дизайн проект кухни (что такое, на каком этапе ремонта лучше заказать, плюсы наличия проекта, вызвать дизайнера-конструктора)
+3. О компании (счетчик выполненных проектов)
+-->
