--- a/mon/index.html
+++ b/mon/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="zxx" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="utf-8">
@@ -107,7 +107,7 @@
                                         <ul id="navigation" class="js-clone-nav">
                                             <li><a class="" href="#header">Главная</a></li>
                                             <li class="has-children">
-                                                <a href="#kuhni">
+                                                <a href="#desc-kuhni">
                                                     Кухни
                                                     <i class="ti-angle-down"></i>
                                                 </a>
@@ -281,14 +281,69 @@
 
     </div>
     <!-- slider_area_end -->
+<!-- About KUHNI -->
+<section id="desc-kuhni" class="ptb">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="text-center pb-3 animate-box">
+                    <h2>Как выбрать кухню?</h2>
+                </div>
+                <div class="">
+                    <p>
+                        <span class="font-weight-bold">Заказ кухни</span>
+                        - это процесс, который осуществляется в соответствии с разработанным индивидуально проектом,
+                        в котором учтены пожелания заказчика по дизайну, размерам, а также дана информация
+                        по планировке и конструктивным особенностям помещения.
+                    </p>
+                </div>
+                <div>
+                    <p class="text-center font-weight-bold">При выборе кухонной мебели следует руководствоваться следующими критериями:</p>
+                    <ul class="text-justify font-weight-light">
+                        <li class="pb-2 animate-box">
+                            <span class="lnr lnr-plus-circle"></span>
+                            <span class="text-fam">Функциональность</span>
+                            <span class="lnr lnr-arrow-right"></span>
+                            во время приготовления пищи все необходимое должно находиться «под рукой»,
+                            чтобы процесс от подготовки продуктов до подачи на стол был грамотно построен.
+                        </li>
+                        <li class="pb-2 animate-box">
+                            <span class="lnr lnr-plus-circle"></span>
+                            <span class="text-fam">Надежность</span>
+                            <span class="lnr lnr-arrow-right"></span>
+                            за долговечность кухонной мебели отвечает материал ее изготовления. Об этом нужно помнить, в частности,
+                            выбирая фасады кухонного гарнитура – именно они подвергаются самым большим воздействиям внешней среды.
+                        </li>
+                        <li class="pb-2 animate-box">
+                            <span class="lnr lnr-plus-circle"></span>
+                            <span class="text-fam">Практичность</span>
+                            <span class="lnr lnr-arrow-right"></span>
+                            Очень важно произвести грамотную планировку всего пространства,
+                            чтобы в кухне вместилась необходимая бытовая техника, а также полноценное рабочее место и обеденная зона.
+                        </li>
+                        <li class="pb-2 animate-box">
+                            <span class="lnr lnr-plus-circle"></span>
+                            <span class="text-fam">Современность, приятный внешний вид</span>
+                            <span class="lnr lnr-arrow-right"></span>
+                            В последние годы этот фактор становится едва ли не самым важным при обстановке кухонного пространства.
+                            При этом не стоит забывать, что интерьер кухни должен составлять общую композицию и во всей квартире
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- END KUHNI -->
+
 <!-- Catalog kuhni -->
 <section id="kuhni" class="ptb">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-12 col-lg-12">
                     <div class="section_title text-center mb-5">
-                        <span>Планировка кухни</span>
-                        <h2>Учитывая особенности планировки кухни бывают</h2>
+                        <span>Планировка и стиль кухни</span>
+                        <h2>Учитывая особенности планировки и стиля кухни бывают</h2>
                         <hr>
                     </div>
 
@@ -1091,18 +1146,20 @@
     </section>
 <!-- END CATALOG -->
 
-<!-- video_area_start -->
-<div class="video_area video_bg overlay">
-        <div class="video_area_inner text-center">
-            <span>Montana Sea View</span>
-            <h3>Relax and Enjoy your <br>
-                Vacation </h3>
-            <a href="https://www.youtube.com/watch?v=vLnPwxZdW4Y" class="video_btn popup-video">
-                <i class="fa fa-play"></i>
-            </a>
+<!-- Offer first -->
+    <section>
+        <div class="video_area video_bg overlay">
+            <div class="video_area_inner text-center ">
+                <span class="animate-box">Kuhni Style</span>
+                <h3>Оставляйте заявки на кухню</h3>
+                <p class="t-offers animate-box">
+                    <span class="t-offers-order">5%</span> скидка при заказе через сайт
+                </p>
+                <button type="button" class="button button-contactForm boxed-btn animate-box">Заказать кухню</button>
+            </div>
         </div>
-    </div>
-<!-- video_area_end -->
+    </section>
+<!-- end offer first -->
 
 <!-- Materials and elements in kuhni -->
 <section id="fabric" class="ptb">
@@ -2526,141 +2583,6 @@
     </section>
 <!-- END Contacts -->
 
-    <!-- features_room_startt -->
-    <div class="features_room">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title text-center mb-100">
-                        <span>Featured Rooms</span>
-                        <h3>Choose a Better Room</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="rooms_here">
-            <div class="single_rooms">
-                <div class="room_thumb">
-                    <img src="img/rooms/1.png" alt="">
-                    <div class="room_heading d-flex justify-content-between align-items-center">
-                        <div class="room_heading_inner">
-                            <span>From $250/night</span>
-                            <h3>Superior Room</h3>
-                        </div>
-                        <a href="#" class="line-button">book now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="single_rooms">
-                <div class="room_thumb">
-                    <img src="img/rooms/2.png" alt="">
-                    <div class="room_heading d-flex justify-content-between align-items-center">
-                        <div class="room_heading_inner">
-                            <span>From $250/night</span>
-                            <h3>Deluxe Room</h3>
-                        </div>
-                        <a href="#" class="line-button">book now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="single_rooms">
-                <div class="room_thumb">
-                    <img src="img/rooms/3.png" alt="">
-                    <div class="room_heading d-flex justify-content-between align-items-center">
-                        <div class="room_heading_inner">
-                            <span>From $250/night</span>
-                            <h3>Signature Room</h3>
-                        </div>
-                        <a href="#" class="line-button">book now</a>
-                    </div>
-                </div>
-            </div>
-            <div class="single_rooms">
-                <div class="room_thumb">
-                    <img src="img/rooms/4.png" alt="">
-                    <div class="room_heading d-flex justify-content-between align-items-center">
-                        <div class="room_heading_inner">
-                            <span>From $250/night</span>
-                            <h3>Couple Room</h3>
-                        </div>
-                        <a href="#" class="line-button">book now</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- features_room_end -->
-
-    <!-- forQuery_start -->
-    <div class="forQuery">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-10 offset-xl-1 col-md-12">
-                    <div class="Query_border">
-                        <div class="row align-items-center justify-content-center">
-                            <div class="col-xl-6 col-md-6">
-                                <div class="Query_text">
-                                    <p>For Reservation 0r Query?</p>
-                                </div>
-                            </div>
-                            <div class="col-xl-6 col-md-6">
-                                <div class="phone_num">
-                                    <a href="#" class="mobile_no">+10 576 377 4789</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- forQuery_end-->
-
-    <!-- instragram_area_start -->
-    <div class="instragram_area">
-        <div class="single_instagram">
-            <img src="img/instragram/1.png" alt="">
-            <div class="ovrelay">
-                <a href="#">
-                    <i class="fa fa-instagram"></i>
-                </a>
-            </div>
-        </div>
-        <div class="single_instagram">
-            <img src="img/instragram/2.png" alt="">
-            <div class="ovrelay">
-                <a href="#">
-                    <i class="fa fa-instagram"></i>
-                </a>
-            </div>
-        </div>
-        <div class="single_instagram">
-            <img src="img/instragram/3.png" alt="">
-            <div class="ovrelay">
-                <a href="#">
-                    <i class="fa fa-instagram"></i>
-                </a>
-            </div>
-        </div>
-        <div class="single_instagram">
-            <img src="img/instragram/4.png" alt="">
-            <div class="ovrelay">
-                <a href="#">
-                    <i class="fa fa-instagram"></i>
-                </a>
-            </div>
-        </div>
-        <div class="single_instagram">
-            <img src="img/instragram/5.png" alt="">
-            <div class="ovrelay">
-                <a href="#">
-                    <i class="fa fa-instagram"></i>
-                </a>
-            </div>
-        </div>
-    </div>
-    <!-- instragram_area_end -->
-
     <!-- footer -->
     <footer class="footer">
         <div class="copy-right_text">
@@ -2701,7 +2623,6 @@
     </footer>
 
     <!-- link that opens popup -->
-
 
     <!-- Button top back -->
     <div class="wrap-button-top">
